<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/yor_work_salary"></TextView>

        <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/pensionerWorkSalary"
                android:inputType="number"></EditText>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grn"></TextView>

    </LinearLayout>
    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <CheckBox
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/provide_sertificat_calculating"
                android:id="@+id/pensionerOfficialWorkDoc"></CheckBox>



    </LinearLayout>
    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/yor_official_pey"></TextView>
        <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="number"
                android:id="@+id/yorPensionWorkSalary"></EditText>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grn"></TextView>


    </LinearLayout>
    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <CheckBox
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/provide_sertificat_pension_calculating"
                android:id="@+id/yorOfficialPensionDoc"></CheckBox>



    </LinearLayout>


</LinearLayout>