<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/arrowed_back">

    <LinearLayout
            android:id="@+id/topLinerLoyaut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <FrameLayout
                android:id="@+id/frgViewStartRegist"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:paddingLeft="35dp"
            >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_match_take"
                android:textColor="#000">
        </TextView>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal">
        <LinearLayout
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:background="@drawable/input_phone">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textSize="30dp"
                    android:textColor="#000"
                    android:background="@drawable/input_phone"
                    android:id="@+id/enterYorSum"
                    android:inputType="number">
            </EditText>
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:layout_width="match_parent"
                    android:text="@string/grn"
                    android:textColor="#000">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="35dp">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/sum"
                android:textColor="#000">
        </TextView>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
        <LinearLayout
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:background="@drawable/input_phone">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_phone"
                    android:id="@+id/calculationSum"
                    android:enabled="false"
                    android:inputType="number">
            </EditText>
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="7"
                    android:text="@string/grn"
                    android:textColor="#000"></TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="35dp"
            android:layout_marginBottom="3dp">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/checked_credit"
                android:textColor="#000">
        </TextView>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
        <Button
                android:layout_height="120dp"
                android:layout_width="120dp"
                android:text="@string/start_button"
                android:textColor="#000"
                android:id="@+id/startCheckedButton"
                android:textSize="30dp"
                android:background="@drawable/button_start">
        </Button>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:paddingLeft="35dp"
            android:layout_weight="1">

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkedYorInfo"
                android:textSize="14sp"
                android:text="@string/access_is_allowed"
                android:textColor="#000">
        </CheckBox>

    </LinearLayout>

</LinearLayout>
