<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@drawable/green_yellow"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <FrameLayout
                android:id = "@+id/frgViewProf3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_margin="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/months_cost"
                android:id="@+id/textView" android:textSize="25dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText" android:layout_weight="1"
                    android:autoText="false"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grn"
                    android:id="@+id/textView2" android:textSize="20dp"/>
        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_text"
                android:id="@+id/textView1" android:textSize="12dp" android:layout_marginBottom="10dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="1dp" android:background="#7b7b7b">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
            android:layout_weight="1">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_use_credits"
                android:id="@+id/textView3" android:textSize="21dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_margin="0dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_use_credits"
                    android:id="@+id/tvActProfileNoCreditNever" android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_margin="0dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/have_close_credit"
                        android:id="@+id/tvActProfileCloseCrerit" android:textSize="20dp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:id="@+id/lnLStitching" android:layout_marginLeft="10dp">
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:id="@+id/lnLNoStitching"
                    android:layout_marginLeft="10dp">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_margin="0dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_open_credit"
                    android:id="@+id/tvActProfileOpenCredit" android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/openCreditYesLayout"
                ></LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/openCreditNoLayout"
                ></LinearLayout>
    </LinearLayout>
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/flForProfileItem"
            android:layout_margin="10dp">
    </FrameLayout>
    <FrameLayout
            android:id="@+id/frgViewThreeProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_margin="10dp">
    </FrameLayout>
</LinearLayout>